Added Apiurl to appsettings and setup test project

--- a/CurrencyConverter/appsettings.json
+++ b/CurrencyConverter/appsettings.json
@@ -12,6 +12,9 @@
     "ExpiryMinutes": 60
   },
   "AllowedHosts": "*",
+  "CurrencyProvider": {
+    "BaseUrl": "https://api.frankfurter.dev/v1/"
+      },
 
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
