--- a/CurrencyConverter/azure-pipelines.yml
+++ b/CurrencyConverter/azure-pipelines.yml
@@ -27,4 +27,4 @@ steps:
     kubernetesServiceEndpoint: 'MyK8sConnection'
     command: apply
     useConfigurationFile: true
-    configuration: k8s/deployment.yaml
+    configuration: CurrencyConverter/K8s/deployment.yaml
